--- a/index.html
+++ b/index.html
@@ -113,10 +113,11 @@
         </div>
         <a href="explore.html">
           <div class="speech-bubble">
+            <i class="fas fa-quote-left"></i>
             <div class="speech-bubble-arrow"></div>
-            <span class="speech-bubble-caption">Hi, my name is <strong>Pepper</strong>,</span>
-            <span>come let us explore <em>together</em></span>
-            <span class="fa fa-arrow-circle-right speech-bubble-icon"></span>
+            <span class="speech-bubble-text">Hi, my name is <strong>Pepper</strong>,</span>
+            <span class="speech-bubble-text">come let us explore <em>together</em></span>
+            <i class="fas fa-arrow-right speech-bubble-icon"></i>
           </div>
         </a>
       </div>
@@ -212,7 +213,7 @@
                       </figure>
 
                       <div class="slide-body">
-                        <h5 class="slide-heading">Night in the Museum</h5>
+                        <h5 class="slide-heading" id="slide-heading-1" #>Night in the Museum</h5>
                         <p>
                           Get your family together for an exciting night in the
                           museum as you sleep over beside dinosaurs and science
@@ -231,7 +232,7 @@
                           alt="A jet pilot in full flight outfit sitting in a simulated cockpit facing the instruments" />
                       </figure>
                       <div class="slide-body">
-                        <h5 class="slide-heading">Visiting Professor Of Aeronautics</h5>
+                        <h5 class="slide-heading" id="slide-heading-2">Visiting Professor Of Aeronautics</h5>
                         <p>
                           It is our pleasure to announce that <em>Professor Sheila Widnall</em>
                           from the <em>Massachusetts Institute of Technology</em>
@@ -251,7 +252,7 @@
                           alt="Close up photo of a glowing red sphere with beams of electricity radiating from it" />
                       </figure>
                       <div class="slide-body">
-                        <h5 class="slide-heading">Energica Exhibition</h5>
+                        <h5 class="slide-heading" id="slide-heading-3">Energica Exhibition</h5>
                         <p>
                           On loan from the <em>NEMO Science Museum in Amsterdam</em>, the
                           Energetica exhibition is coming to the Community Science
