--- a/about_us.html
+++ b/about_us.html
@@ -11,7 +11,7 @@
       We believe science should be fun and we want to create a space where everyone can experience the wonders of our discoveries." />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="https://kit.fontawesome.com/fbd3401b24.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://use.typekit.net/cgz4jxk.css" />
+  <link rel="stylesheet" href="https://use.typekit.net/ijy7hen.css">
   <link rel="stylesheet" href="styles/about_us.css" />
   <link rel="shortcut icon" type="image" href="images/icons/CSM favicon.png" />
 </head>
@@ -103,9 +103,10 @@
             <div class="main-heading-left"></div>
             <h1 class="main-heading">About us</h1>
           </div>
+          <h2 class="main-sub-heading">— Let us explore together
+          </h2>
           <section class="section-container vision-section">
             <div class="info-box item-1">
-              <h5 class="info-box-heading">Let us explore together</h5>
               <p>
                 Come join us at the Community Science Museum where we’re committed
                 to making science accessible to all.
