--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
       This page also contains a FAQ section where you will find answers to common questions." />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="https://kit.fontawesome.com/fbd3401b24.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://use.typekit.net/cgz4jxk.css" />
+  <link rel="stylesheet" href="https://use.typekit.net/ijy7hen.css">
   <link rel="stylesheet" href="styles/contact.css" />
   <link rel="shortcut icon" type="image" href="images/icons/CSM favicon.png" />
 </head>
@@ -99,13 +99,11 @@
       <div class="main-wrapper">
         <div class="content-container">
           <div class="main-heading-wrapper">
-            <div class="main-heading-left"></div>
+            <div class="main-heading-left"></div>    
             <h1 class="main-heading">Contact & FAQ</h1>
           </div>
-          <div class="info-box">
-            <h2 class="main-sub-heading">If you need to get in touch with us, please use this form:
-            </h2>
-          </div>
+          <h2 class="main-sub-heading">— If you need to get in touch with us, please use this form
+          </h2>
           <section class="contact-section">
             <form class="form info-box">
               <ul class="form-info">
