--- a/exhibitions.html
+++ b/exhibitions.html
@@ -12,7 +12,7 @@
     We also have a real-life sized exhibit of the moon landing, and much much more" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="https://kit.fontawesome.com/fbd3401b24.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://use.typekit.net/cgz4jxk.css" />
+  <link rel="stylesheet" href="https://use.typekit.net/ijy7hen.css">
   <link rel="stylesheet" href="styles/exhibitions.css" />
   <link rel="shortcut icon" type="image" href="images/icons/CSM favicon.png" />
 </head>
@@ -102,17 +102,15 @@
         <div class="content-container">
           <div class="main-heading-wrapper">
             <div class="main-heading-left"></div>
-            <h1 class="main-heading">Exhibition spaces</h1>
+              <h1 class="main-heading">Exhibition spaces</h1>    
           </div>
-          <div class="info-box">
-            <h2 class="main-sub-heading">Our more than 1000 unique exhibitions are dived into 5 main spaces for you to
-              explore</h2>
-          </div>
+          <h2 class="main-sub-heading">— Our more than 1000 unique exhibitions are dived into 5 main spaces for you to
+            explore</h2>
           <section class="section-container">
             <div class="card-wrapper">
               <!-- <div id="cosmology-anchor"></div> -->
               <div class="card" id="cosmology-anchor">
-                <div class="card-image"><img src="images\cosmology_large.jpg" /></div>              
+                <div class="card-image"><img src="images\cosmology_large.jpg" /></div>
                 <div class="card-body">
                   <h2 id="cosmology" class="card-heading">Cosmology</h2>
                   <p>
@@ -133,7 +131,7 @@
 
               <!-- <div id="evolution-anchor"></div> -->
               <div class="card" id="evolution-anchor">
-                <div class="card-image"><img src="images/evolution_large.jpg" /></div>              
+                <div class="card-image"><img src="images/evolution_large.jpg" /></div>
                 <div class="card-body">
                   <h2 id="evolution" class="card-heading">Evolution</h2>
                   <p>
