--- a/explore.html
+++ b/explore.html
@@ -13,7 +13,7 @@
       And there is also ways for you to work with us if you are a researcher or academic" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="https://kit.fontawesome.com/fbd3401b24.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://use.typekit.net/cgz4jxk.css" />
+  <link rel="stylesheet" href="https://use.typekit.net/ijy7hen.css">
   <link rel="stylesheet" href="styles/explore.css" />
   <link rel="shortcut icon" type="image" href="images/icons/CSM favicon.png" />
 </head>
@@ -102,15 +102,14 @@
       <div class="main-wrapper">
         <div class="content-container">
           <div class="main-heading-wrapper">
-            <div class="main-heading-left"></div>
-            <h1 class="main-heading">More to explore</h1>
+            <div class="main-heading-left"></div>     
+              <h1 class="main-heading">More to explore</h1>
           </div>
-          <div class="info-box">
-            <h2 class="main-sub-heading">Here you can learn more about what our museum can offer, whether you are a kid,
-              a
-              teacher or a researcher.
-            </h2>
-          </div>
+          <h2 class="main-sub-heading">— Here you can learn more about what our museum can offer, whether you are a
+            kid,
+            a
+            teacher or a researcher.
+          </h2>
           <section class="section-container">
             <div class="blue info-box" id="item-1">
               <h2 class="info-box-heading">For Kids</h2>
