--- a/get_involved.html
+++ b/get_involved.html
@@ -11,7 +11,7 @@
       You van also support us by becoming a volunteer or by working here through an internship" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="https://kit.fontawesome.com/fbd3401b24.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://use.typekit.net/cgz4jxk.css" />
+  <link rel="stylesheet" href="https://use.typekit.net/ijy7hen.css">
   <link rel="stylesheet" href="styles/get_involved.css" />
   <link rel="shortcut icon" type="image" href="images/icons/CSM favicon.png" />
 </head>
@@ -101,12 +101,10 @@
         <div class="content-container">
           <div class="main-heading-wrapper">
             <div class="main-heading-left"></div>
-            <h1 class="main-heading">You can support our museum in various ways</h1>
+              <h1 class="main-heading">You can support our museum in various ways</h1>
           </div>
-          <div class="info-box">
-            <h2 class="main-sub-heading">In order for us to create the best possible museum, we need your contribution
-            </h2>
-          </div>
+          <h2 class="main-sub-heading">— In order for us to create the best possible museum, we need your contribution
+          </h2>
           <section class="section-container">
             <div class="info-box" id="item-1">
               <h2 class="info-box-heading">Donations</h2>
