--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       We also have a variety of exciting special events on offer all year round." />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="https://kit.fontawesome.com/fbd3401b24.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://use.typekit.net/cgz4jxk.css" />
+  <link rel="stylesheet" href="https://use.typekit.net/ijy7hen.css">
   <link rel="stylesheet" href="styles/index.css" />
   <link rel="shortcut icon" type="image" href="images/icons/CSM favicon.png" />
 </head>
@@ -201,6 +201,7 @@
               <div class="main-heading-left"></div>
               <h2 id="special-event" class="main-heading">News & special events</h2>
             </div>
+
             <div class="slider-wrapper">
               <div class="slider-outer-container">
                 <div class="slider-inner-container">
