--- a/visit.html
+++ b/visit.html
@@ -13,7 +13,7 @@
       coffee snacks and more as well as a shop offering great gifts and activity packs: " />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="https://kit.fontawesome.com/fbd3401b24.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://use.typekit.net/cgz4jxk.css" />
+  <link rel="stylesheet" href="https://use.typekit.net/ijy7hen.css">
   <link rel="stylesheet" href="styles/visit.css" />
   <link rel="shortcut icon" type="image" href="images/icons/CSM favicon.png" />
 </head>
@@ -104,13 +104,11 @@
           <div class="main-heading-wrapper">
             <div class="main-heading-left"></div>
             <h1 class="main-heading">
-              You will find us right in the center of Bergen
+              Admission, location, opening hours
             </h1>
           </div>
-          <div class="info-box">
-            <h2 class="main-sub-heading">All you need to know about admission, location, opening hours and facilities.
-            </h2>
-          </div>
+          <h2 class="main-sub-heading">— You will find us right in the center of Bergen
+          </h2>
           <section class="info-section">
             <div class="info-box" id="item-1">
               <h2 class="info-box-heading">Admission</h2>
@@ -208,7 +206,15 @@
             </div>
           </section>
           <!-- <div id="facilities"></div> -->
+          <div class="main-heading-wrapper">
+            <div class="main-heading-left"></div>
+              <h1 class="main-heading">
+                Facilities
+              </h1>
+            
+          </div>
           <section class="facilities-section">
+
             <div id="accessibility" class="info-box item-1">
               <h3 class="info-box-heading">Accessibility</h3>
               <p>The museum has wheelchair accessibility ramps.</p>
