--- a/about_us.html
+++ b/about_us.html
@@ -103,7 +103,7 @@
             <div class="main-heading-left"></div>
             <h1 class="main-heading">About us</h1>
           </div>
-          <h2 class="main-sub-heading">— Let us explore together
+          <h2 class="main-sub-heading sub-heading-box">— Let us explore together
           </h2>
           <section class="section-container vision-section">
             <div class="info-box item-1">
@@ -150,7 +150,7 @@
               </p>
             </div>
           </section>
-          <div class="get-in-touch" id="get-in-touch-1">
+          <div class="cta-wrapper" id="get-in-touch-1">
             <p>Do you have any questions?</p>
             <a href="contact.html" class="button">
               Get in touch
@@ -161,6 +161,8 @@
               <div class="main-heading-left"></div>
               <h4 class="main-heading">Meet our passionate tour guides</h4>
             </div>
+            <h2 class="main-sub-heading sub-heading-box">— We hope to see you soon
+            </h2>
             <div class="gallery-wrapper">
               <figure class="tourguide">
                 <img src="images\charles.png"
@@ -192,7 +194,7 @@
                 <figcaption>ALBERT</figcaption>
               </figure>
             </div>
-            <p class="gallery-quote">"We Hope to See You Soon"</p>
+            <!-- <p class="gallery-quote">"We Hope to See You Soon"</p> -->
           </section>
         </div>
       </div>
