--- a/contact.html
+++ b/contact.html
@@ -99,10 +99,10 @@
       <div class="main-wrapper">
         <div class="content-container">
           <div class="main-heading-wrapper">
-            <div class="main-heading-left"></div>    
+            <div class="main-heading-left"></div>
             <h1 class="main-heading">Contact & FAQ</h1>
           </div>
-          <h2 class="main-sub-heading">— If you need to get in touch with us, please use this form
+          <h2 class="main-sub-heading sub-heading-box">— If you need to get in touch with us, please use this form
           </h2>
           <section class="contact-section">
             <form class="form info-box">
