--- a/exhibitions.html
+++ b/exhibitions.html
@@ -102,10 +102,10 @@
         <div class="content-container">
           <div class="main-heading-wrapper">
             <div class="main-heading-left"></div>
-              <h1 class="main-heading">Exhibition spaces</h1>    
+            <h1 class="main-heading">Exhibition spaces</h1>
           </div>
-          <h2 class="main-sub-heading">— Our more than 1000 unique exhibitions are dived into 5 main spaces for you to
-            explore</h2>
+          <h2 class="main-sub-heading sub-heading-box">— Our more than 1000 unique exhibitions are dived into 5 main
+            spaces for you to explore</h2>
           <section class="section-container">
             <div class="card-wrapper">
               <!-- <div id="cosmology-anchor"></div> -->
