--- a/visit.html
+++ b/visit.html
@@ -104,10 +104,10 @@
           <div class="main-heading-wrapper">
             <div class="main-heading-left"></div>
             <h1 class="main-heading">
-              Admission, location, opening hours
+              Admission, location & opening hours
             </h1>
           </div>
-          <h2 class="main-sub-heading">— You will find us right in the center of Bergen
+          <h2 class="main-sub-heading sub-heading-box">— You will find us right in the center of Bergen
           </h2>
           <section class="info-section">
             <div class="info-box" id="item-1">
@@ -208,10 +208,10 @@
           <!-- <div id="facilities"></div> -->
           <div class="main-heading-wrapper">
             <div class="main-heading-left"></div>
-              <h1 class="main-heading">
-                Facilities
-              </h1>
-            
+            <h1 class="main-heading">
+              Facilities
+            </h1>
+
           </div>
           <section class="facilities-section">
 
