--- a/explore.html
+++ b/explore.html
@@ -102,10 +102,12 @@
       <div class="main-wrapper">
         <div class="content-container">
           <div class="main-heading-wrapper">
-            <div class="main-heading-left"></div>     
-              <h1 class="main-heading">More to explore</h1>
+            <div class="main-heading-left"></div>
+            <h1 class="main-heading">More to explore</h1>
           </div>
-          <h2 class="main-sub-heading">— Here you can learn more about what our museum can offer, whether you are a
+          <h2 class="main-sub-heading heading-box">— Here you can learn more about what our museum can offer, whether
+            you
+            are a
             kid,
             a
             teacher or a researcher.
@@ -151,11 +153,13 @@
               <!-- <img src="images\kids-cartoon.jpg" alt="" /> -->
             </div>
           </section>
-          <div class="get-in-touch" id="get-in-touch-1">
+
+          <div class="cta-wrapper" id="get-in-touch-1">
             <p>Do you want to join one of our clubs?</p>
             <a href="contact.html" class="button">Get in touch
             </a>
           </div>
+
           <section class="section-container">
             <div class="info-box" id="item-4">
               <h3 class="info-box-heading">For Teachers</h3>
@@ -191,7 +195,7 @@
               <!-- <img src="images\researcher-cartoon_large.jpg" alt="" /> -->
             </div>
           </section>
-          <div class="get-in-touch" id="get-in-touch-2">
+          <div class="cta-wrapper" id="get-in-touch-2">
             <p>Are you a teacher or a researcher?</p>
             <a href="contact.html" class="button">Get in touch</a>
           </div>
