--- a/get_involved.html
+++ b/get_involved.html
@@ -101,9 +101,10 @@
         <div class="content-container">
           <div class="main-heading-wrapper">
             <div class="main-heading-left"></div>
-              <h1 class="main-heading">You can support our museum in various ways</h1>
+            <h1 class="main-heading">You can support our museum in various ways</h1>
           </div>
-          <h2 class="main-sub-heading">— In order for us to create the best possible museum, we need your contribution
+          <h2 class="main-sub-heading sub-heading-box">— In order for us to create the best possible museum, we need your
+            contribution
           </h2>
           <section class="section-container">
             <div class="info-box" id="item-1">
@@ -148,7 +149,7 @@
               </p>
             </div>
           </section>
-          <div class="get-in-touch" id="get-in-touch-1">
+          <div class="cta-wrapper" id="get-in-touch-1">
             <p>Do you want to help us out?</p>
             <a href="contact.html" class="button">Get in touch
             </a>
