--- a/about_us.html
+++ b/about_us.html
@@ -103,10 +103,11 @@
             <div class="main-heading-left"></div>
             <h1 class="main-heading">About us</h1>
           </div>
-          <h2 class="main-sub-heading sub-heading-box">— Let us explore together
-          </h2>
+          <!-- <h2 class="main-sub-heading sub-heading-box">— Let us explore together
+          </h2> -->
           <section class="section-container vision-section">
             <div class="info-box item-1">
+              <h5 class="info-box-heading">— Let us explore together</h5>
               <p>
                 Come join us at the Community Science Museum where we’re committed
                 to making science accessible to all.
@@ -161,8 +162,6 @@
               <div class="main-heading-left"></div>
               <h4 class="main-heading">Meet our passionate tour guides</h4>
             </div>
-            <h2 class="main-sub-heading sub-heading-box">— We hope to see you soon
-            </h2>
             <div class="gallery-wrapper">
               <figure class="tourguide">
                 <img src="images\charles.png"
@@ -194,7 +193,8 @@
                 <figcaption>ALBERT</figcaption>
               </figure>
             </div>
-            <!-- <p class="gallery-quote">"We Hope to See You Soon"</p> -->
+            <h2 class="main-sub-heading sub-heading-box">— We hope to see you soon
+            </h2>
           </section>
         </div>
       </div>
