--- a/get_involved.html
+++ b/get_involved.html
@@ -103,7 +103,7 @@
             <div class="main-heading-left"></div>
             <h1 class="main-heading">You can support our museum in various ways</h1>
           </div>
-          <h2 class="main-sub-heading sub-heading-box">— In order for us to create the best possible museum, we need your
+          <h2 class="main-sub-heading info-box">— In order for us to create the best possible museum, we need your
             contribution
           </h2>
           <section class="section-container">
