--- a/visit.html
+++ b/visit.html
@@ -107,7 +107,7 @@
               Admission, location & opening hours
             </h1>
           </div>
-          <h2 class="main-sub-heading sub-heading-box">— You will find us right in the center of Bergen
+          <h2 class="main-sub-heading info-box">— You will find us right in the center of Bergen
           </h2>
           <section class="info-section">
             <div class="info-box" id="item-1">
