--- a/explore.html
+++ b/explore.html
@@ -105,7 +105,7 @@
             <div class="main-heading-left"></div>
             <h1 class="main-heading">More to explore</h1>
           </div>
-          <h2 class="main-sub-heading heading-box">— Here you can learn more about what our museum can offer, whether
+          <h2 class="main-sub-heading info-box">— Here you can learn more about what our museum can offer, whether
             you
             are a
             kid,
@@ -165,7 +165,7 @@
               <h3 class="info-box-heading">For Teachers</h3>
               <p>
                 As a community-driven museum, we want to work with schools to
-                create places of learning and exploring. .
+                create places of learning and exploring.
               </p>
               <p>
                 Our team are on hand to give your students guided tours of the
