--- a/contact.html
+++ b/contact.html
@@ -102,7 +102,7 @@
             <div class="main-heading-left"></div>
             <h1 class="main-heading">Contact & FAQ</h1>
           </div>
-          <h2 class="main-sub-heading sub-heading-box">— If you need to get in touch with us, please use this form
+          <h2 class="main-sub-heading">— If you need to get in touch with us, please use this form
           </h2>
           <section class="contact-section">
             <form class="form info-box">
