--- a/exhibitions.html
+++ b/exhibitions.html
@@ -104,7 +104,7 @@
             <div class="main-heading-left"></div>
             <h1 class="main-heading">Exhibition spaces</h1>
           </div>
-          <h2 class="main-sub-heading info-box">— Our more than 1000 unique exhibitions are dived into 5 main
+          <h2 class="main-sub-heading heading-box">— Our more than 1000 unique exhibitions are dived into 5 main
             spaces for you to explore</h2>
           <section class="section-container">
             <div class="card-wrapper">
