--- a/explore.html
+++ b/explore.html
@@ -105,7 +105,7 @@
             <div class="main-heading-left"></div>
             <h1 class="main-heading">More to explore</h1>
           </div>
-          <h2 class="main-sub-heading info-box">— Here you can learn more about what our museum can offer, whether
+          <h2 class="main-sub-heading">— Here you can learn more about what our museum can offer, whether
             you
             are a
             kid,
