--- a/about_us.html
+++ b/about_us.html
@@ -151,7 +151,7 @@
               </p>
             </div>
           </section>
-          <div class="cta-wrapper" id="get-in-touch-1">
+          <div class="cta-wrapper">
             <p>Do you have any questions?</p>
             <a href="contact.html" class="button">
               Get in touch
@@ -162,6 +162,8 @@
               <div class="main-heading-left"></div>
               <h4 class="main-heading">Meet our passionate tour guides</h4>
             </div>
+            <h2 class="main-sub-heading">— We hope to see you soon
+            </h2>
             <div class="gallery-wrapper">
               <figure class="tourguide">
                 <img src="images\charles.png"
@@ -193,8 +195,7 @@
                 <figcaption>ALBERT</figcaption>
               </figure>
             </div>
-            <h2 class="main-sub-heading sub-heading-box">— We hope to see you soon
-            </h2>
+            
           </section>
         </div>
       </div>
