--- a/get_involved.html
+++ b/get_involved.html
@@ -108,7 +108,7 @@
           </h2>
           <section class="section-container">
             <div class="info-box" id="item-1">
-              <h2 class="info-box-heading">Donations</h2>
+              <h3 class="info-box-heading">Donations</h3>
               <p>
                 There are various ways you can support the museum. Donations are
                 very welcome and are an important way we keep this museum open and
@@ -122,7 +122,7 @@
               </p>
             </div>
             <div class="info-box" id="item-2">
-              <h2 class="info-box-heading">Volunteer</h2>
+              <h3 class="info-box-heading">Volunteer</h3>
               <p>
                 A number of people volunteer their time and effort to keep the
                 displays in good order and ready for visitors to come and enjoy.
@@ -138,7 +138,7 @@
               </p>
             </div>
             <div class="info-box" id="item-3">
-              <h2 class="info-box-heading">Internships</h2>
+              <h3 class="info-box-heading">Internships</h3>
               <p>
                 Are you interested in working in a museum? Do you enjoy the fun
                 and excitement of sharing the wonders of nature with people?
@@ -149,7 +149,7 @@
               </p>
             </div>
           </section>
-          <div class="cta-wrapper" id="get-in-touch-1">
+          <div class="cta-wrapper">
             <p>Do you want to help us out?</p>
             <a href="contact.html" class="button">Get in touch
             </a>
@@ -182,7 +182,7 @@
   <footer>
     <div class="footer-wrapper">
       <div class="footer-container fi1">
-        <h6 class="footer-heading">CONNECT:</h6>
+        <h4 class="footer-heading">CONNECT:</h4>
         <ul class="footer-icon-list">
           <li>
             <a href="https://www.facebook.com/"><span class="fa fa-facebook-f footer-icon"></span></a>
@@ -199,7 +199,7 @@
         </ul>
       </div>
       <div class="footer-container">
-        <h6 class="footer-heading">HOURS:</h6>
+        <h4 class="footer-heading">HOURS:</h4>
         <div class="footer-hours-wrapper">
           <ul class="footer-list">
             <li>Monday:</li>
@@ -223,7 +223,7 @@
       </div>
       <div class="footer-container">
         <div>
-          <h6 class="footer-heading">LOCATION:</h6>
+          <h4 class="footer-heading">LOCATION:</h4>
           <p>Nygårdsgaten 112</p>
           <p>5008 Bergen, Norway</p>
         </div>
@@ -232,7 +232,7 @@
         </a>
       </div>
       <div class="footer-container">
-        <h6 class="footer-heading">CONTACT & SUPPORT:</h6>
+        <h4 class="footer-heading">CONTACT & SUPPORT:</h4>
         <ul class="footer-list">
           <li><a href="about_us.html">About Us</a></li>
           <li><a href="visit.html#facilities">Facilities</a></li>
