--- a/explore.html
+++ b/explore.html
@@ -114,7 +114,7 @@
           </h2>
           <section class="section-container">
             <div class="blue info-box" id="item-1">
-              <h2 class="info-box-heading">For Kids</h2>
+              <h3 class="info-box-heading">For Kids</h3>
               <p>
                 Are you a young person looking to learn more about science? Come
                 on down to our museum, there’s plenty to see and do.
@@ -154,7 +154,7 @@
             </div>
           </section>
 
-          <div class="cta-wrapper" id="get-in-touch-1">
+          <div class="cta-wrapper">
             <p>Do you want to join one of our clubs?</p>
             <a href="contact.html" class="button">Get in touch
             </a>
@@ -195,7 +195,7 @@
               <!-- <img src="images\researcher-cartoon_large.jpg" alt="" /> -->
             </div>
           </section>
-          <div class="cta-wrapper" id="get-in-touch-2">
+          <div class="cta-wrapper">
             <p>Are you a teacher or a researcher?</p>
             <a href="contact.html" class="button">Get in touch</a>
           </div>
@@ -227,7 +227,7 @@
   <footer>
     <div class="footer-wrapper">
       <div class="footer-container fi1">
-        <h6 class="footer-heading">CONNECT:</h6>
+        <h5 class="footer-heading">CONNECT:</h5>
         <ul class="footer-icon-list">
           <li>
             <a href="https://www.facebook.com/"><span class="fa fa-facebook-f footer-icon"></span></a>
@@ -244,7 +244,7 @@
         </ul>
       </div>
       <div class="footer-container">
-        <h6 class="footer-heading">HOURS:</h6>
+        <h5 class="footer-heading">HOURS:</h5>
         <div class="footer-hours-wrapper">
           <ul class="footer-list">
             <li>Monday:</li>
@@ -268,7 +268,7 @@
       </div>
       <div class="footer-container">
         <div>
-          <h6 class="footer-heading">LOCATION:</h6>
+          <h5 class="footer-heading">LOCATION:</h5>
           <p>Nygårdsgaten 112</p>
           <p>5008 Bergen, Norway</p>
         </div>
@@ -277,7 +277,7 @@
         </a>
       </div>
       <div class="footer-container">
-        <h6 class="footer-heading">CONTACT & SUPPORT:</h6>
+        <h5 class="footer-heading">CONTACT & SUPPORT:</h5>
         <ul class="footer-list">
           <li><a href="about_us.html">About Us</a></li>
           <li><a href="visit.html#facilities">Facilities</a></li>
