explore page improved

--- a/explore.html
+++ b/explore.html
@@ -113,52 +113,96 @@
             teacher or a researcher.
           </h2>
           <section class="section-container">
-            <div class="blue info-box" id="item-1">
-              <h3 class="info-box-heading">For Kids</h3>
-              <p>
-                Are you a young person looking to learn more about science? Come
-                on down to our museum, there’s plenty to see and do.
-              </p>
-              <p>
-                You can learn about Newtonian physics from our bumper swing, or
-                why not travel back in time and meet our resident Woolly Mammoth?
-              </p>
-              <p>
-                Our exhibits are designed to be accessible for interested minds,
-                so make sure you come ready to learn and explore.
-              </p>
-              <p>You can also join one of our popular science clubs.</p>
-            </div>
-            <div class="info-box" id="item-2">
-              <div id="club-anchor"></div>
-              <h3 class="info-box-heading">Join a Children's Club</h3>
-              <h4 class="info-box-sub-heading">Young Stars Club</h4>
-              <p>
-                We also have the <strong>Young Stars Club</strong> which meets once a week
-                on a <em>Saturday between 10:00 and 13:00</em> where you’ll get to explore
-                and experiment with our team of experts.
-              </p>
-              <h4 class="info-box-sub-heading">The Holiday Club</h4>
-              <p>
-                During the school holidays we run <strong>The Holiday Club</strong> where
-                you can join other children your age to go on a journey of
-                discovery. Each holiday we pick a new theme to explore.
-              </p>
-              <p>
-                To find out more about <strong>The Young Stars Club</strong> or <strong>The Holiday Club</strong>
-                and how you can join, send us a message.
-              </p>
-            </div>
-            <div class="image-box" id="item-3">
-              <!-- <img src="images\kids-cartoon.jpg" alt="" /> -->
+            <div class="kids-container">
+              <div class="item-1">
+                <h3 class="secondary-heading">For Kids</h3>
+                <p>
+                  Are you a young person looking to learn more about science? Come
+                  on down to our museum, there’s plenty to see and do.
+                </p>
+                <p>
+                  You can learn about Newtonian physics from our bumper swing, or
+                  why not travel back in time and meet our resident Woolly Mammoth?
+                </p>
+                <p>
+                  Our exhibits are designed to be accessible for interested minds,
+                  so make sure you come ready to learn and explore.
+                </p>
+                <p>You can also join one of our popular science clubs.</p>
+              </div>
+              <figure class="kids-image item-2">
+                <img src="images/museum-1.jpg" class="kids-image" />
+              </figure>
             </div>
           </section>
 
-          <div class="cta-wrapper">
-            <p>Do you want to join one of our clubs?</p>
-            <a href="contact.html" class="button">Get in touch
-            </a>
-          </div>
+          <section class="section-container sec2">
+            <h3 class="secondary-heading">Join a Children's Club</h3>
+            <!-- <div id="club-anchor"></div> -->
+            <div class="clubs-container">
+
+              <div class="clubs-wrapper">
+                <div>
+                  <h4 class="info-box-sub-heading">The Holiday Club</h4>
+                  <p>
+                    During the school holidays we run <strong>The Holiday Club</strong> where
+                    you can join other children your age to go on a journey of
+                    discovery. Each holiday we pick a new theme to explore.
+                  </p>
+                  <p>
+                    To find out more about <strong>The Young Stars Club</strong> or <strong>The Holiday Club</strong>
+                    and how you can join, send us a message.
+                  </p>
+                </div>
+
+                <div class="clubs-gallery">
+                  <figure class="clubs-image">
+                    <img src="images/gallery-1.jpg" class="clubs-image" />
+                  </figure>
+                  <figure class="clubs-image">
+                    <img src="images/gallery-2.jpg" class="clubs-image" />
+                  </figure>
+                  <figure class="clubs-image">
+                    <img src="images/gallery-3.jpg" class="clubs-image" />
+                  </figure>
+                  <figure class="clubs-image">
+                    <img src="images/gallery-4.jpg" class="clubs-image" />
+                  </figure>
+                </div>
+              </div>
+              <div class="clubs-wrapper">
+                <div>
+                  <h4 class="info-box-sub-heading">Young Stars Club</h4>
+                  <p>
+                    We also have the <strong>Young Stars Club</strong> which meets once a week
+                    on a <em>Saturday between 10:00 and 13:00</em> where you’ll get to explore
+                    and experiment with our team of experts.
+                  </p>
+                </div>
+                <div class="clubs-gallery">
+                  <figure class="clubs-image">
+                    <img src="images/gallery-1.jpg" class="clubs-image" />
+                  </figure>
+                  <figure class="clubs-image">
+                    <img src="images/gallery-2.jpg" class="clubs-image" />
+                  </figure>
+                  <figure class="clubs-image">
+                    <img src="images/gallery-3.jpg" class="clubs-image" />
+                  </figure>
+                  <figure class="clubs-image">
+                    <img src="images/gallery-4.jpg" class="clubs-image" />
+                  </figure>
+                </div>
+              </div>
+            </div>
+            <div class="cta-wrapper">
+              <p>Do you want to join one of our clubs?</p>
+              <a href="contact.html" class="button">Get in touch
+              </a>
+            </div>
+          </section>
+
+
 
           <section class="section-container">
             <div class="info-box" id="item-4">
