--- a/explore.html
+++ b/explore.html
@@ -101,7 +101,7 @@
     <main>
       <div class="main-wrapper">
         <div class="content-container">
-          <div class="main-heading-wrapper">
+          <!-- <div class="main-heading-wrapper">
             <div class="main-heading-left"></div>
             <h1 class="main-heading">More to explore</h1>
           </div>
@@ -111,11 +111,18 @@
             kid,
             a
             teacher or a researcher.
-          </h2>
-          <section class="section-container">
+          </h2> -->
+          <section class="kids-section">
+            <div class="main-heading-wrapper">
+              <div class="main-heading-left"></div>
+              <h1 class="main-heading">For Kids</h1>
+            </div>
             <div class="kids-container">
+
               <div class="item-1">
-                <h3 class="secondary-heading">For Kids</h3>
+
+                <!-- <h3 class="secondary-heading"></h3> -->
+
                 <p>
                   Are you a young person looking to learn more about science? Come
                   on down to our museum, there’s plenty to see and do.
@@ -133,116 +140,127 @@
               <figure class="kids-image item-2">
                 <img src="images/museum-1.jpg" class="kids-image" />
               </figure>
+
             </div>
           </section>
 
-          <section class="section-container sec2">
-            <h3 class="secondary-heading">Join a Children's Club</h3>
+          <section class="clubs-section">
             <!-- <div id="club-anchor"></div> -->
-            <div class="clubs-container">
-
-              <div class="clubs-wrapper">
+            <div class="clubs-wrapper">
+              <div class="clubs-container">
+                <h3 class="clubs-heading">Join a Children's Club</h3>
+              </div>
+              <div class="clubs-container">
                 <div>
-                  <h4 class="info-box-sub-heading">The Holiday Club</h4>
+                  <h4 class="info-box-sub-heading" id="club-1-heading">Young Stars Club</h4>
+                  <p>
+                    We have the <strong>Young Stars Club</strong> which meets once a week
+                    on a <em>Saturday between 10:00 and 13:00</em> where you’ll get to explore
+                    and experiment with our team of experts.
+                  </p>
+                  <p>
+                    To find out more about <strong>The Young Stars Club</strong>
+                    and how you can join, send us a message.
+                  </p>
+                </div>
+                <div class="clubs-gallery">
+                  <figure class="clubs-image">
+                    <img src="images/gallery-1.jpg" class="clubs-image" />
+                  </figure>
+                  <figure class="clubs-image">
+                    <img src="images/gallery-2.jpg" class="clubs-image" />
+                  </figure>
+                  <figure class="clubs-image">
+                    <img src="images/gallery-3.jpg" class="clubs-image" />
+                  </figure>
+                  <figure class="clubs-image">
+                    <img src="images/gallery-4.jpg" class="clubs-image" />
+                  </figure>
+                </div>
+              </div>
+              <div class="clubs-container" id="holiday-club">
+                <div>
+                  <h4 class="info-box-sub-heading" id="club-2-heading">The Holiday Club</h4>
                   <p>
                     During the school holidays we run <strong>The Holiday Club</strong> where
                     you can join other children your age to go on a journey of
                     discovery. Each holiday we pick a new theme to explore.
                   </p>
                   <p>
-                    To find out more about <strong>The Young Stars Club</strong> or <strong>The Holiday Club</strong>
+                    To find out more about <strong>The Holiday Club</strong>
                     and how you can join, send us a message.
                   </p>
                 </div>
+                <div class="clubs-gallery" >
+                  <figure class="clubs-image">
+                    <img src="images/gallery-1.jpg" class="clubs-image" />
+                  </figure>
+                  <figure class="clubs-image">
+                    <img src="images/gallery-2.jpg" class="clubs-image" />
+                  </figure>
+                  <figure class="clubs-image">
+                    <img src="images/gallery-3.jpg" class="clubs-image" />
+                  </figure>
+                  <figure class="clubs-image">
+                    <img src="images/gallery-4.jpg" class="clubs-image" />
+                  </figure>
+                </div>
+              </div>
+              <div class="cta-wrapper">
+                <p>Do you want to join one of our clubs?</p>
+                <a href="contact.html" class="button">Get in touch
+                </a>
+              </div>
+            </div>
+          </section>
 
-                <div class="clubs-gallery">
-                  <figure class="clubs-image">
-                    <img src="images/gallery-1.jpg" class="clubs-image" />
-                  </figure>
-                  <figure class="clubs-image">
-                    <img src="images/gallery-2.jpg" class="clubs-image" />
-                  </figure>
-                  <figure class="clubs-image">
-                    <img src="images/gallery-3.jpg" class="clubs-image" />
-                  </figure>
-                  <figure class="clubs-image">
-                    <img src="images/gallery-4.jpg" class="clubs-image" />
-                  </figure>
-                </div>
+
+
+          <section class="research-section">
+            <div class="main-heading-wrapper">
+              <div class="main-heading-left"></div>
+              <h1 class="main-heading">Teachers & researchers</h1>
+            </div>
+            <div class="research-wrapper">
+              <div class="info-box" id="item-4">
+                <h3 class="info-box-heading">For Teachers</h3>
+                <p>
+                  As a community-driven museum, we want to work with schools to
+                  create places of learning and exploring.
+                </p>
+                <p>
+                  Our team are on hand to give your students guided tours of the
+                  museum, teach them in our learning laboratory, and provide great
+                  video presentations that will excite and inspire them
+                </p>
+                <p>
+                  Please get in touch with us here to find out more about our
+                  facilities and to arrange a time to bring your students through
+                  for a visit.
+                </p>
               </div>
-              <div class="clubs-wrapper">
-                <div>
-                  <h4 class="info-box-sub-heading">Young Stars Club</h4>
-                  <p>
-                    We also have the <strong>Young Stars Club</strong> which meets once a week
-                    on a <em>Saturday between 10:00 and 13:00</em> where you’ll get to explore
-                    and experiment with our team of experts.
-                  </p>
-                </div>
-                <div class="clubs-gallery">
-                  <figure class="clubs-image">
-                    <img src="images/gallery-1.jpg" class="clubs-image" />
-                  </figure>
-                  <figure class="clubs-image">
-                    <img src="images/gallery-2.jpg" class="clubs-image" />
-                  </figure>
-                  <figure class="clubs-image">
-                    <img src="images/gallery-3.jpg" class="clubs-image" />
-                  </figure>
-                  <figure class="clubs-image">
-                    <img src="images/gallery-4.jpg" class="clubs-image" />
-                  </figure>
-                </div>
+              <div class="info-box" id="item-5">
+                <h3 class="info-box-heading">For Researchers</h3>
+                <p>
+                  Are you looking to get involved with our team of researchers and
+                  academics?
+                </p>
+                <p>
+                  Our museum offers various ways for you to use our resources and
+                  contribute towards them. We have online records, laboratory space,
+                  and a working relationship with a number of universities around
+                  the country.
+                </p>
               </div>
+              <!-- <div class="image-box" id="item-6">
+              </div> -->
             </div>
             <div class="cta-wrapper">
-              <p>Do you want to join one of our clubs?</p>
-              <a href="contact.html" class="button">Get in touch
-              </a>
+              <p>Are you a teacher or a researcher?</p>
+              <a href="contact.html" class="button">Get in touch</a>
             </div>
           </section>
 
-
-
-          <section class="section-container">
-            <div class="info-box" id="item-4">
-              <h3 class="info-box-heading">For Teachers</h3>
-              <p>
-                As a community-driven museum, we want to work with schools to
-                create places of learning and exploring.
-              </p>
-              <p>
-                Our team are on hand to give your students guided tours of the
-                museum, teach them in our learning laboratory, and provide great
-                video presentations that will excite and inspire them
-              </p>
-              <p>
-                Please get in touch with us here to find out more about our
-                facilities and to arrange a time to bring your students through
-                for a visit.
-              </p>
-            </div>
-            <div class="info-box" id="item-5">
-              <h3 class="info-box-heading">For Researchers</h3>
-              <p>
-                Are you looking to get involved with our team of researchers and
-                academics?
-              </p>
-              <p>
-                Our museum offers various ways for you to use our resources and
-                contribute towards them. We have online records, laboratory space,
-                and a working relationship with a number of universities around
-                the country.
-              </p>
-            </div>
-            <div class="image-box" id="item-6">
-              <!-- <img src="images\researcher-cartoon_large.jpg" alt="" /> -->
-            </div>
-          </section>
-          <div class="cta-wrapper">
-            <p>Are you a teacher or a researcher?</p>
-            <a href="contact.html" class="button">Get in touch</a>
-          </div>
         </div>
       </div>
       <div class="newsletter-wrapper">
