--- a/explore.html
+++ b/explore.html
@@ -101,30 +101,15 @@
     <main>
       <div class="main-wrapper">
         <div class="content-container">
-          <!-- <div class="main-heading-wrapper">
-            <div class="main-heading-left"></div>
-            <h1 class="main-heading">More to explore</h1>
-          </div>
-          <h2 class="main-sub-heading">— Here you can learn more about what our museum can offer, whether
-            you
-            are a
-            kid,
-            a
-            teacher or a researcher.
-          </h2> -->
           <section class="kids-section">
             <div class="main-heading-wrapper">
               <div class="main-heading-left"></div>
               <h1 class="main-heading">For Kids</h1>
             </div>
             <div class="kids-container">
-
               <div class="item-1">
-
-                <!-- <h3 class="secondary-heading"></h3> -->
-
                 <p>
-                  Are you a young person looking to learn more about science? Come
+                  — Are you a young person looking to learn more about science? Come
                   on down to our museum, there’s plenty to see and do.
                 </p>
                 <p>
@@ -140,7 +125,6 @@
               <figure class="kids-image item-2">
                 <img src="images/museum-1.jpg" class="kids-image" />
               </figure>
-
             </div>
           </section>
 
@@ -150,6 +134,7 @@
               <div class="clubs-container">
                 <h3 class="clubs-heading">Join a Children's Club</h3>
               </div>
+              <hr class="clubs-divider" />
               <div class="clubs-container">
                 <div>
                   <h4 class="info-box-sub-heading" id="club-1-heading">Young Stars Club</h4>
@@ -178,6 +163,7 @@
                   </figure>
                 </div>
               </div>
+              <hr class="clubs-divider" />
               <div class="clubs-container" id="holiday-club">
                 <div>
                   <h4 class="info-box-sub-heading" id="club-2-heading">The Holiday Club</h4>
@@ -191,7 +177,7 @@
                     and how you can join, send us a message.
                   </p>
                 </div>
-                <div class="clubs-gallery" >
+                <div class="clubs-gallery">
                   <figure class="clubs-image">
                     <img src="images/gallery-1.jpg" class="clubs-image" />
                   </figure>
@@ -206,6 +192,7 @@
                   </figure>
                 </div>
               </div>
+              <hr class="clubs-divider" />
               <div class="cta-wrapper">
                 <p>Do you want to join one of our clubs?</p>
                 <a href="contact.html" class="button">Get in touch
@@ -255,7 +242,7 @@
               <!-- <div class="image-box" id="item-6">
               </div> -->
             </div>
-            <div class="cta-wrapper">
+            <div class="cta-wrapper" id="research-cta-wrapper">
               <p>Are you a teacher or a researcher?</p>
               <a href="contact.html" class="button">Get in touch</a>
             </div>
