about page improved

--- a/about_us.html
+++ b/about_us.html
@@ -103,21 +103,24 @@
             <div class="main-heading-left"></div>
             <h1 class="main-heading">About us</h1>
           </div>
+          <p class="main-heading-lead">— Let us explore together. Come join us at the Community Science Museum where
+            we’re committed
+            to making science accessible to all.</p>
           <!-- <h2 class="main-sub-heading sub-heading-box">— Let us explore together
           </h2> -->
           <section class="section-container vision-section">
-            <div class="info-box item-1">
+            <!-- <div class="info-box item-1">
               <h5 class="info-box-heading">— Let us explore together</h5>
               <p>
                 Come join us at the Community Science Museum where we’re committed
                 to making science accessible to all.
               </p>
-            </div>
-            <div class="image-box item-2">
+            </div> -->
+            <div class="image-box item-1">
               <img class="vision-img" src="images\together_large.jpg"
                 alt="A 10 year old white boy and a black girl who is a couple of years younger is studying an mechanical exhibit in a glass cabinet. They are both holding their hands towards the glass, and the boy is point to something of interest." />
             </div>
-            <div class="info-box item-3">
+            <div class="info-box item-2">
               <h5 class="info-box-heading">Science should be Fun</h5>
               <p>
                 We believe science should not be confined to the textbook, but
@@ -132,7 +135,7 @@
                 home).
               </p>
             </div>
-            <div class="info-box item-4">
+            <div class="info-box item-3">
               <h5 class="info-box-heading">History of Science</h5>
               <p>
                 Over the course of human history, science has developed from our
@@ -141,7 +144,7 @@
                 life itself.
               </p>
             </div>
-            <div class="info-box item-5">
+            <div class="info-box item-4">
               <h5 class="info-box-heading">Our Vision</h5>
               <p>
                 The aim of our museum is to create a space where everyone can
@@ -151,7 +154,7 @@
               </p>
             </div>
           </section>
-          <div class="cta-wrapper">
+          <div class="cta-wrapper info-box">
             <p>Do you have any questions?</p>
             <a href="contact.html" class="button">
               Get in touch
@@ -195,7 +198,7 @@
                 <figcaption>ALBERT</figcaption>
               </figure>
             </div>
-            
+
           </section>
         </div>
       </div>
