--- a/explore.html
+++ b/explore.html
@@ -107,8 +107,8 @@
               <h1 class="main-heading">For Kids</h1>
             </div>
             <div class="kids-container">
-              <div class="item-1">
-                <p>
+              <div class="kids-text">
+                <p class="main-heading-lead">
                   — Are you a young person looking to learn more about science? Come
                   on down to our museum, there’s plenty to see and do.
                 </p>
@@ -122,7 +122,7 @@
                 </p>
                 <p>You can also join one of our popular science clubs.</p>
               </div>
-              <figure class="kids-image item-2">
+              <figure class="kids-image kids-figure">
                 <img src="images/museum-1.jpg" class="kids-image" />
               </figure>
             </div>
@@ -134,7 +134,7 @@
               <div class="clubs-container">
                 <h3 class="clubs-heading">Join a Children's Club</h3>
               </div>
-              <hr class="clubs-divider" />
+              <!-- <hr class="clubs-divider" /> -->
               <div class="clubs-container">
                 <div>
                   <h4 class="info-box-sub-heading" id="club-1-heading">Young Stars Club</h4>
@@ -192,8 +192,8 @@
                   </figure>
                 </div>
               </div>
-              <hr class="clubs-divider" />
-              <div class="cta-wrapper">
+              <!-- <hr class="clubs-divider" /> -->
+              <div class="cta-wrapper" id="clubs-cta-wrapper">
                 <p>Do you want to join one of our clubs?</p>
                 <a href="contact.html" class="button">Get in touch
                 </a>
@@ -208,6 +208,7 @@
               <div class="main-heading-left"></div>
               <h1 class="main-heading">Teachers & researchers</h1>
             </div>
+            <p class="main-heading-lead">— Lorem ipsum</p>
             <div class="research-wrapper">
               <div class="info-box" id="item-4">
                 <h3 class="info-box-heading">For Teachers</h3>
@@ -242,7 +243,7 @@
               <!-- <div class="image-box" id="item-6">
               </div> -->
             </div>
-            <div class="cta-wrapper" id="research-cta-wrapper">
+            <div class="cta-wrapper info-box" id="research-cta-wrapper">
               <p>Are you a teacher or a researcher?</p>
               <a href="contact.html" class="button">Get in touch</a>
             </div>
