--- a/visit.html
+++ b/visit.html
@@ -107,8 +107,8 @@
               Admission, location & opening hours
             </h1>
           </div>
-          <h2 class="main-sub-heading">— You will find us right in the center of Bergen
-          </h2>
+          <p class="main-heading-lead">— You will find us right in the center of Bergen
+          </p>
           <section class="info-section">
             <div class="info-box" id="item-1">
               <h3 class="info-box-heading">Admission</h3>
