--- a/exhibitions.html
+++ b/exhibitions.html
@@ -104,8 +104,8 @@
             <div class="main-heading-left"></div>
             <h1 class="main-heading">Exhibition spaces</h1>
           </div>
-          <h2 class="main-sub-heading heading-box">— Our more than 1000 unique exhibitions are dived into 5 main
-            spaces for you to explore</h2>
+          <p class="main-heading-lead">— Our more than 1000 unique exhibitions are dived into 5 main
+            spaces for you to explore</p>
           <section class="section-container">
             <div class="card-wrapper">
               <!-- <div id="cosmology-anchor"></div> -->
