--- a/get_involved.html
+++ b/get_involved.html
@@ -103,9 +103,9 @@
             <div class="main-heading-left"></div>
             <h1 class="main-heading">You can support our museum in various ways</h1>
           </div>
-          <h2 class="main-sub-heading">— In order for us to create the best possible museum, we need your
+          <p class="main-heading-lead">— In order for us to create the best possible museum, we need your
             contribution
-          </h2>
+          </p>
           <section class="section-container">
             <div class="info-box" id="item-1">
               <h3 class="info-box-heading">Donations</h3>
@@ -149,7 +149,7 @@
               </p>
             </div>
           </section>
-          <div class="cta-wrapper">
+          <div class="cta-wrapper info-box">
             <p>Do you want to help us out?</p>
             <a href="contact.html" class="button">Get in touch
             </a>
