--- a/index.html
+++ b/index.html
@@ -201,7 +201,8 @@
               <div class="main-heading-left"></div>
               <h3 id="special-event" class="main-heading">News & special events</h3>
             </div>
-
+            <p class="main-heading-lead">— Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+              deserunt mollit anim id est laborum</p>
             <div class="slider-wrapper">
               <div class="slider-outer-container">
                 <div class="slider-inner-container">
@@ -290,6 +291,8 @@
               <div class="main-heading-left"></div>
               <h3 id="clubs" class="main-heading">Join one of our children clubs</h3>
             </div>
+            <p class="main-heading-lead">— Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+              deserunt mollit anim id est laborum</p>
             <div class="clubs-wrapper">
               <figure class="clubs">
                 <a href="explore.html#club-anchor"><img src="images\club_1.jpg"
